--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -2,3 +2,16 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+
+.social-btn {
+  font-size: 16px;
+  font-family: Arial;
+  font-weight: normal;
+  border-radius: 10px;
+  border: 2ps solid #dcdcdc;
+  padding: 16px 37px;
+  background-color: #ededed;
+  color: #777777
+    
+  
+}
