--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,6 @@
 <html>
 <head>
   <title>Bloccit</title>
-    <meta name="viewport" content= "width=device-width, inital-scale-1">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -12,6 +11,7 @@
 <ul class="nav nav-tabs">
   <li> <%= link_to "Bloccit", root_path %></li>
   <li> <%= link_to "About", about_path %></li>
+  <li> <%= link_to "Posts", posts_path %></li>
          
         <div class="pull-right user-info">
            <% if current_user %>
