--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -14,4 +14,8 @@
       <%= link_to "Edit", edit_topic_post_path(@topic, @post), class: 'btn btn-success' %>
     <% end %>
   </div>
+    <div class="col-md-4">
+      <p> Comments: <%= comment.name %></p>
+      
+  </div>
 </div>
