updated markdown on Postrb

--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -7,23 +7,27 @@
  <div class="row">
    <div class="col-md-8">
      <p class="lead"><%= @topic.description %></p>
+     
      <% @posts.each do |post| %>
        <div class="media">
          <div class="media-body">
            <h4 class="media-heading">
-               <%= link_to (<%= post.markdown_title %>), [@topic, post] %>
+               <%= link_to <%= @post.markdown_title %>, [@topic, post] %>
            </h4>
+           
               <small>
                  submitted <%= time_ago_in_words(post.created_at) %> ago by <%= post.user.name %><br/>
-                 <%= post.comments.count %> Comments
-               </small>
+                 <%= @post.comments.count %> Comments
+              </small>
          </div>
        </div>
-     <% end %>
-   </div>
+     
+      </div>
+     </div>            
+
  <div class="col-md-4">
    <% if policy(Post.new).create? %>
      <%= link_to "New Post", new_topic_post_path(@topic), class: 'btn btn-success' %>
    <% end %>
  </div>
- </div>
+<% end %>
