Mentor fixes for paginate, comments, etc.

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,4 @@
-<%= render(@comments) || "There are no comments available." %>
+<%= "There are no comments available." if comment.nil? %>
 
 <div class="media">
   <%= link_to '#', class: 'pull-left' do %>
