--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,4 @@
-<h1><%= @post.title %></h1>
+<h1><%= @post.markdown_title %></h1>
 
 <div class="row">
   <div class="col-md-8">
@@ -7,7 +7,7 @@
        submitted <%= time_ago_in_words(@post.created_at) %> ago by
        <%= @post.user.name %>
      </small>
-    <p><%= markdown @post.body %></p>
+    <p><%= @post.markdown_body %></p>
   </div>
   <div class="col-md-4">
     <% if policy(@post).edit? %>
@@ -18,7 +18,10 @@
      <% end %>
   </div>
     <div class="col-md-4">
-      <p> Comments: <%= comment.name %></p>
+      <p> Comments: </p>
+      <% @post.comments.each do |comment| %>
+        <%= render comment %>
+      <% end %>
       
   </div>
 </div>
