--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,6 +1,6 @@
 <%= "There are no comments available." if comment.nil? %>
 
-<div class="media">
+ <%= content_tag :div, class: 'media', id: "comment-#{comment.id}" do %>
   <%= link_to '#', class: 'pull-left' do %>
     <%= image_tag(comment.user.avatar.small.url) if comment.user.avatar? %>
   <% end %>
@@ -13,5 +13,5 @@
     </small>
     <p><%= comment.body %></p>
   </div>
-</div>
+ <% end %>
 
