--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,14 +2,22 @@
 @import "bootstrap";
 
 .user-info {
-   margin-top: 9px;
- }
- 
-.nav {
-   margin-top: 5px;
- }
+  margin-top: 9px;
+}
 
- .vote-arrows {
-   width: 40px;
-   text-align: center;
- }
+.nav {
+  margin-top: 5px;
+}
+
+.vote-arrows {
+  width: 40px;
+  text-align: center;
+}
+
+.favorite {
+  margin-top: 20px;
+}
+
+.voted {
+  opacity: 0.5;
+}
