--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -27,9 +27,8 @@
   </div>
     <div class="col-md-4">
       <p> Comments: </p>
-      <% @post.comments.each do |comment| %>
-        <%= render comment %>
-      <% end %>
+      
+      <%= render partial: "comments/comment", collection: @comments %>
       
   </div>
 </div>
