--- a/app/views/votes/_voter.html.erb
+++ b/app/views/votes/_voter.html.erb
@@ -3,7 +3,7 @@
     <div>
       <%= link_to [post, Vote.new],
         post_up_vote_path(post),
-        class: "glyphicon glyphicon-chevron-up #{(current_user.voted(post) && current_user.voted(post).up_vote?) ? 'voted' : '' }" %>
+        class: up_vote_link_classes(post) %>
     </div>
     <div>
       <strong><%= post.points %></strong>
@@ -11,7 +11,7 @@
     <div>
       <%= link_to [post, Vote.new],
         post_down_vote_path(post),
-        class: "glyphicon glyphicon-chevron-down #{(current_user.voted(post) && current_user.voted(post).down_vote?) ? 'voted' : '' }" %>
+        class: down_vote_link_classes(post) %>
     </div>
   </div>
 <% end %>
