--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,3 +1,4 @@
+<%= form_for [@post, @post.comments.build], remote: true do |f| %>
 <%= form_for [topic, post, post.comments.new] do |f| %>
 <% if comment.errors.any? %>
      <div class="alert alert-danger">
