--- a/app/views/topics/posts/show.html.erb
+++ b/app/views/topics/posts/show.html.erb
@@ -27,8 +27,11 @@
   </div>
     <div class="col-md-4">
       <p> Comments: </p>
-      
+      <div class='js-comments'>
       <%= render partial: "comments/comment", collection: @comments %>
-      
+       </div>
+       <div class='new-comment'>
+       <%= render 'comments/form' %>
+       </div>
   </div>
 </div>
