--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,6 +1,6 @@
 <%= "There are no comments available." if comment.nil? %>
 
- <%= content_tag :div, class: 'media', id: "comment-#{comment.id}" do %>
+<div class="media" id="comment-<%= comment.id %>">
   <%= link_to '#', class: 'pull-left' do %>
     <%= image_tag(comment.user.avatar.small.url) if comment.user.avatar? %>
   <% end %>
@@ -8,10 +8,10 @@
     <small>
       <%= comment.user.name %> commented <%= time_ago_in_words(comment.created_at) %> ago
       <% if policy(comment).destroy? %>
-      <%= link_to "Delete", [comment.post, comment], method: :delete, remote: true %>
+        | <%= link_to "Delete", [comment.post, comment], method: :delete, remote: true %>
       <% end %>
     </small>
     <p><%= comment.body %></p>
   </div>
- <% end %>
+</div>
 
